--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,6 +3,7 @@
 
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/index.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/navbar.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL }}/css/GridPractice.css" />
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 <link rel="apple-touch-icon" href="img/favicon.ico" />
 <link rel="bookmark" href="img/favicon.ico"/>
