--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <nav class="pl-4 md:pl-24">
-  <a href="{{ .Site.BaseURL }}" class="logo" style=" font-size: 5.25vmin">{{ .Site.Title }}</a>
+  <a href="{{ .Site.BaseURL }}/#mainBG" class="logo">夏時紀錄</a>
   <ul class="hidden md:flex">
     {{ if eq .Title `Mekaku's Site` }}
     {{ range .Site.Menus.main }}
