--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
     <body>
         {{- partial "header.html" . -}}
         {{ partial "navbar.html" . }}
-        {{ partial "hometest.html" . }}
+        {{ partial "wave.html" . }}
         <div id="content">
         {{- block "main" . }}
 
