--- a/layouts/partials/BelowTest.html
+++ b/layouts/partials/BelowTest.html
@@ -1,3 +1,3 @@
-<footer class="text-center mt-8 py-2 bg-gray-900 text-white">
+<footer class="text-center bg-gray-900 text-white">
   <div style="color:grey; font-size:16px;">以下測試區:所有文章 </div>
 </footer>
