--- a/layouts/partials/home_title.html
+++ b/layouts/partials/home_title.html
@@ -1,3 +1,3 @@
-<div class="text-3xl title-deco tracking-wide text-center">
+<div class="text-3xl tracking-wide text-center title-deco">
   {{ .title }}
 </div>
