--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,7 +4,6 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 #mainBG {
   position: relative;
   width: 100%;
@@ -78,10 +77,9 @@
 .title-deco::after {
   position: absolute;
   content: "";
-  width: 42px;
+  width: 100%;
   height: 4px;
   background: #ee7785;
-  left: 0;
-  bottom: 0px;
+  bottom: 0;
 }
-/*這邊分隔線這邊分隔線這邊分隔線這邊分隔線這邊分隔線這邊分隔線*/
+/*這邊分隔線這邊分#ee7785隔線這邊分隔線這邊分隔線這邊分隔線這邊分隔線*/
