--- a/static/css/pageslick.css
+++ b/static/css/pageslick.css
@@ -42,6 +42,8 @@
 .post-slider .post-wrapper .post {
   background: white;
   display: inline-block;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
   height: 400px;
   margin: 0px 10px;
   width: 300px;
@@ -53,11 +55,18 @@
   margin: 10px;
   text-decoration: none;
   padding: 0px 5px;
-  /*border: 1px solid red;*/
+  /*border: 1rem solid red;*/
 }
 .post-slider .post-wrapper .post .slider-image {
   width: 100%;
-  height: 12rem;
+  aspect-ratio: 1/.5;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
+  object-fit: cover;
+}
+@media (min-width: 40em) {
+  .post-slider .post-wrapper .post {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
