--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,12 +11,13 @@
       {{ partial "Projects.html" . }}
       {{ partial "AllCategories.html" . }}
       {{ partial "GridPractice.html" . }}
-      {{ partial "PageWrapper.html" . }}
-  <!--{{ partial "AllAAA.html" . }}
+      <!--{{ partial "PageWrapper.html" . }}
+      {{ partial "AllAAA.html" . }}
       {{ partial "BelowTest.html" . }}
       {{ partial "TEST.html" . }} -->
     <!--  {{ partial "BelowTest.html" . }}
       {{ partial "GridPractice.html" . }}-->
       {{ partial "footer.html" . }}
+      {{ partial "UIdesign1.html" . }}
   </body>
 </html>
