--- a/static/css/index.css
+++ b/static/css/index.css
@@ -87,14 +87,14 @@
 /*這邊分隔線這邊分#ee7785隔線這邊分隔線這邊分隔線這邊分隔線這邊分隔線*/
 #ProjectsSection {
   position: relative;
-  width: 1015px;
+  /* width: 1015px; */
   height: 248px;
 
   background: #FFFFFF;
 }
 #SectionTitle {
   position: absolute;
-  width: 174px;
+  /* width: 174px; */
   height: 56px;
   left: 22px;
   top: 9px;
@@ -111,7 +111,7 @@
 }
 #SectionSeeAll {
   position: absolute;
-  width: 109px;
+  /* width: 109px; */
   height: 56px;
   right: 21px;
   top: 9px;
@@ -134,7 +134,7 @@
   padding: 10px 0px;
 
   position: absolute;
-  width: 972px;
+  width: 100%;
   height: 171px;
   left: 22px;
   top: 55px;
@@ -162,13 +162,14 @@
   flex-direction: row;
   align-items: flex-start;
   padding: 12px 18px;
+  margin-left: 30px;
 
   position: absolute;
   width: 100px;
   height: 39px;
-  left: 419px;
+  /* left: 419px; */
   top: 90px;
-  /*z-index: 2;*/
+  z-index: 10;
   background: linear-gradient(274.32deg, #5265FF 6.64%, #828FFF 91.62%);
   mix-blend-mode: normal;
   border-radius: 112px;
@@ -199,14 +200,14 @@
   flex: none;
   order: 0;
   flex-grow: 0;
-  margin: 0px 10px;
 }
 #projects-content-card-title {
   position: absolute;
   width: 269px;
   height: 43px;
-  left: 27px;
+  /* left: 27px; */
   top: 35px;
+  margin-left: 30px;
 
   font-family: 'Arial';
   font-style: normal;
@@ -215,25 +216,26 @@
   line-height: 25px;
   display: flex;
   align-items: center;
-  /*z-index: 2;*/
+  z-index: 10;
   color: #FFFFFF;
 }
 #projects-content-card-img {
   position: absolute;
   width: 372px;
   height: 151px;
-  left: 0px;
-  top: 10px;
+  /* left: 0px;
+  top: 10px; */
   border-radius: 18px;
   mix-blend-mode: normal;
   z-index: 1;
+  /* aspect-ratio: 1/1; */
 }
 #projects-content-card-img-hover {
   position: absolute;
   width: 372px;
   height: 151px;
-  left: 0px;
-  top: 10px;
+  /* left: 0px;
+  top: 10px; */
   z-index: 9;
   background: linear-gradient(82.97deg, rgba(50, 50, 50, 0.5) 9.74%, rgba(50, 50, 50, 0.1) 98.39%);
   border-radius: 18px;
@@ -244,6 +246,6 @@
   position: absolute;
   width: 372px;
   height: 151px;
-  left: 0px;
-  top: 10px;
+  /* left: 0px;
+  top: 10px; */
 }
