--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,5 +19,6 @@
       {{ partial "GridPractice.html" . }}-->
       {{ partial "footer.html" . }}
       {{ partial "UIdesign1.html" . }}
+      {{ partial "UIdesign2.html" . }}
   </body>
 </html>
