--- a/layouts/partials/UIdesign1.html
+++ b/layouts/partials/UIdesign1.html
@@ -5,18 +5,18 @@
         <div id="ProjectsOverflow">
             {{ range $data.project.list }}
             <div id="projects-content-cards">
-                <div id="projects-content-card-img-groups">
+                <div id="projects-content-card-img-groups"><a href="{{ .myConnect }}">
                     <div id="projects-content-card-img-hover"></div>
                     <img id="projects-content-card-img" src="{{ .image }}"/>
-                </div>>
+                </a></div>
                 <div id="projects-content-card-btn"><a href="{{ .myConnect }}">繼續閱讀 ></a></div>
-                <div id="projects-content-card-title">{{ .title }}</div>
+                <div id="projects-content-card-title"><a href="{{ .myConnect }}">{{ .title }}</a></div>
             </div>
             {{end}}   
         </div>
-        <span id="SectionTitle">活動專區</span>
+        <span id="SectionTitle">活動計畫</span>
         <span id="SectionSeeAll">See all</span>
         
     </section>
-
+    
 </html>
