--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,14 +5,17 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/navbar.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/GridPractice.css" />
 <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/figmacss.css" />
+
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 <link rel="apple-touch-icon" href="img/favicon.ico" />
 <link rel="bookmark" href="img/favicon.ico"/>
+
 <link href="https://unpkg.com/tailwindcss@^2.0/dist/tailwind.min.css" rel="stylesheet">
 <!--上面那一行只是快速演示Tailwind的功能-->
 <script src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
 
+<!-- 黑色navibar -->
 <script type="text/javascript">
     window.addEventListener('scroll', ()=>{
         const nav = document.querySelector('nav')
