--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,5 +20,6 @@
       {{ partial "footer.html" . }}
       {{ partial "UIdesign1.html" . }}
       {{ partial "UIdesign2.html" . }}
+      {{ partial "footer.html" . }}
   </body>
 </html>
