--- a/layouts/partials/UIdesign2.html
+++ b/layouts/partials/UIdesign2.html
@@ -3,6 +3,7 @@
     <section id="AllArticlesSection">
         <span id="SectionTitle2">文章列表</span>
         <span id="SectionSeeAll">See all</span>
+        <div id="SectionDescription">這裡是測試文字</div>
         <div id="AllCateOverflow">
             <div id="CateBtn"><a>All</a></div>
             <div id="CateBtn2"><a>心得</a></div>
@@ -14,11 +15,11 @@
         </div>
         <div id="ContentCardOverflow">
             {{ range .Site.RegularPages }}
-            <div id="ContentCard-container">
+            <div class="hover:shadow-2xl transition duration-200 shadow-lg" id="ContentCard-container">
                 
-                    <div id="ContentCard-stroke"></div>
+                    <!-- <div id="ContentCard-stroke"></div> -->
                     <div id="ContentCard-imgoverflow">
-                        <a href="{{.Permalink}}"><img id="ContentCard-img" src="{{.Params.image}}"/></a>
+                        <a href="{{.Permalink}}"><img class="transform hover:scale-110 transition duration-200" id="ContentCard-img" src="{{.Params.image}}"/></a>
                     </div>
                     <div id="ContentCard-tag"><a>手札</a></div>
                     <div id="ContentCard-title"><a href="{{.Permalink}}">{{ .Title }}</a></div>
