--- a/layouts/partials/About.html
+++ b/layouts/partials/About.html
@@ -11,7 +11,7 @@
   <img class="w-32 h-32 rounded-full mx-auto" src="/img/TonyP2.jpg" alt="" width="384" height="512">
   <div class="pt-6 text-center space-y-4">
     <blockquote>
-      <p class="text-lg font-semibold">
+      <p class="text-base font-semibold">
         “
         {{ if $data.aboutTony.text}}{{ replace $data.aboutTony.text "\n" "<br />" | safeHTML }}
         {{else}}It goes wrong{{end}}
@@ -37,7 +37,7 @@
   <img class="w-32 h-32 rounded-full mx-auto" src="/img/FrankP2.jpg" alt="" width="384" height="512">
   <div class="pt-6 text-center space-y-4">
     <blockquote>
-      <p class="text-lg font-semibold">
+      <p class="text-base font-semibold">
         “
         {{ if $data.aboutFrank.text}}{{ replace $data.aboutFrank.text "\n" "<br />" | safeHTML }}
         {{else}}It goes wrong{{end}}
