--- a/layouts/partials/Projects.html
+++ b/layouts/partials/Projects.html
@@ -1,8 +1,6 @@
 {{ $data := .Site.Data.home }}
-<main class="container mx-auto mt-8 px-4 xl:px-0">
-<br><br><br><br>
 <!--這邊是活動這邊是活動-->
-  <section id="projects" class="mt-12" style="margin: 20px">
+  <section id="projects" class="" style="max-width: 100rem; margin-inline: auto; padding-inline: 2rem">
     <div class="md:flex justify-center">
       {{ partial "home_title" (dict "title" "活動計畫") }}
     </div>
