--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,5 +21,7 @@
       {{ partial "UIdesign1.html" . }}
       {{ partial "UIdesign2.html" . }}
       {{ partial "footer.html" . }}
+      {{ partial "Poem.html" . }}
+      {{ partial "footer.html" . }}
   </body>
 </html>
