--- a/static/css/figmacss.css
+++ b/static/css/figmacss.css
@@ -4,7 +4,7 @@
     height: 248px;
     max-width: 100rem;
     margin-inline: auto;
-    padding-inline: 2rem;
+    padding-inline: 1rem;
     background: #FFFFFF;
   }
   #SectionTitle {
@@ -27,7 +27,7 @@
   #SectionSeeAll {
     position: absolute;
     /* width: 109px; */
-    height: 56px;
+    height: 60px;
     right: 21px;
     top: 9px;
     
@@ -49,7 +49,7 @@
     padding: 10px 0px;
   
     position: absolute;
-    width: 100%;
+    width: 95%;
     /* height: 171px; */
     /* left: 22px; */
     top: 55px;
@@ -171,14 +171,14 @@
     height: 434px;
     max-width: 100rem;
     margin-inline: auto;
-    padding-inline: 2rem;
+    padding-inline: 1rem;
     background: #FFFFFF;
     /* background-image: url('https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80') */
   }
   #SectionSeeAll2 {
     position: absolute;
     width: 96px;
-    height: 92px;
+    height: 75px;
     right: 21px;
     top: 5px;
     
@@ -217,7 +217,7 @@
     padding: 0px;
   
     position: absolute;
-    width: 100%;
+    width: 95%;
     /* height: 55px; */
     /* left: 42px; */
     top: 78px;
@@ -317,9 +317,9 @@
     padding: 0px;
   
     position: absolute;
-    width: 100%;
+    width: 95%;
     height: 274.5px;
-    /* left: 42px; */
+    left: 15px;
     top: 151px;
     overflow-x: scroll;
   }
