--- a/static/css/index.css
+++ b/static/css/index.css
@@ -100,7 +100,7 @@
 
 .Poem-Wrap {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background-image: url("https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
   background-repeat: no-repeat;
@@ -120,6 +120,7 @@
   width: 420px;
   height: 450px;
   overflow: hidden;
+  margin-top: 5vh;
 }
 
 .Poem-Card::before {
