--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -7,7 +7,7 @@
 </head>
     <body>
       <div style="margin:10px" class="md:flex justify-center">
-         {{ partial "home_title" (dict "title" "文章列表: #") }}
+         <!-- {{ partial "home_title" (dict "title" "文章列表: #") }} -->
          {{ partial "list_title" (dict "title" $ggg) }}
       </div>
       <div
