--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,6 +20,8 @@
       {{ partial "footer.html" . }}
       {{ partial "UIdesign1.html" . }}
       {{ partial "UIdesign2.html" . }}
+      <!-- {{ partial "footer.html" . }} -->
+      <!-- {{ partial "UIdesign3.html" . }} -->
       {{ partial "footer.html" . }}
       {{ partial "Poem.html" . }}
       {{ partial "footer.html" . }}
