--- a/layouts/partials/list_title.html
+++ b/layouts/partials/list_title.html
@@ -1,5 +1,5 @@
-<div class="text-3xl">
-  {{ .title }}
-</div>
+<span class="text-2xl tracking-wide text-center title-deco">
+  文章列表: # {{ .title }}
+</span>
 
 <!--這個是我用來加標題，沒有紅底用的-->
