--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,12 +17,14 @@
       {{ partial "TEST.html" . }} -->
     <!--  {{ partial "BelowTest.html" . }}
       {{ partial "GridPractice.html" . }}-->
-      {{ partial "footer.html" . }}
+      <!-- {{ partial "footer.html" . }} -->
+      {{ partial "UIdesign0.html" . }}
       {{ partial "UIdesign1.html" . }}
       {{ partial "UIdesign2.html" . }}
+      {{ partial "UIdesign3.html" . }}
+      {{ partial "UIdesign4.html" . }}
       <!-- {{ partial "footer.html" . }} -->
-      <!-- {{ partial "UIdesign3.html" . }} -->
-      {{ partial "footer.html" . }}
+      <!-- {{ partial "footer.html" . }} -->
       {{ partial "Poem.html" . }}
       {{ partial "footer.html" . }}
   </body>
