--- a/layouts/partials/UIdesign2.html
+++ b/layouts/partials/UIdesign2.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <section id="AllArticlesSection">
-        <span id="SectionTitle2">文章列表</span>
+        <span id="SectionTitle2">夏時手札</span>
         <span id="SectionSeeAll">See all</span>
-        <div id="SectionDescription">這裡是測試文字</div>
+        <div id="SectionDescription">這邊是Tony x Frank 共同所寫的手札，分享各式各樣的故事!  給喜歡探索和發現的你!</div>
         <div id="AllCateOverflow">
             <div id="CateBtn"><a>All</a></div>
             <div id="CateBtn2"><a>心得</a></div>
