--- a/layouts/partials/Projects.html
+++ b/layouts/partials/Projects.html
@@ -1,10 +1,9 @@
 {{ $data := .Site.Data.home }}
 <!--這邊是活動這邊是活動-->
-  <section id="projects" class="" style="max-width: 100rem; margin-inline: auto; padding-inline: 2rem">
+  <section id="projects" class="" style="margin-bottom: 90px; max-width: 100rem; margin-inline: auto; padding-inline: 2rem">
     <div class="md:flex justify-center">
       {{ partial "home_title" (dict "title" "活動計畫") }}
     </div>
-<br>
 
     {{if $data.project.list}}
     <div
