--- a/static/css/GridPractice.css
+++ b/static/css/GridPractice.css
@@ -1,7 +1,9 @@
+
 .grind-container {
   max-width: 100rem;
   margin-inline: auto;
   padding-inline: 2rem;
+  margin-bottom: 30px
 /*background-color: gray;*/
 }
 .product-grid {
