--- a/layouts/shortcodes/mimg.html
+++ b/layouts/shortcodes/mimg.html
@@ -1,1 +1,4 @@
-<img src="{{ .Get `src` }}" style="width: {{ .Get `width` }}; height: {{ .Get `height` }}; display:flex">
+<div style="margin-left: 5vw;margin-right: 5vw;">
+    <img src="{{ .Get `src` }}" style="width: {{ .Get `width` }}; height: {{ .Get `height` }}; display:flex">
+    <p style="color: gray; text-align: center;">{{ .Get `ptext` }}</p>
+</div>
